# lerobot-robot-realman

./: .gitignore  README.md  pyproject.toml
lerobot_robot_realman/: __init__.py  config_realman.py  gripper.py  realman.py
tools/: test_realman_eef_pose.py  test_realman_joint.py
